@@ -19,11 +19,47 @@
 
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/linear_master_item_container"
-  style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Clickable">
+  style="@style/Widget.Grocy.LinearLayout.ListItem.SingleLine.Clickable"
+  android:paddingStart="16dp"
+  android:paddingEnd="16dp">
 
-  <TextView
-    android:id="@+id/text_master_item_name"
-    style="@style/Widget.Grocy.TextView.ListItem.Title" />
+  <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
+
+    <TextView
+      android:id="@+id/text_master_item_name"
+      style="@style/Widget.Grocy.TextView.ListItem.Title" />
+
+  </LinearLayout>
+
+  <ImageView
+    android:id="@+id/picture"
+    android:layout_width="56dp"
+    android:layout_height="56dp"
+    android:layout_marginStart="16dp"
+    android:layout_gravity="center_vertical|end"
+    tools:ignore="ContentDescription" />
+
+  <com.google.android.material.card.MaterialCardView
+    android:id="@+id/picture_placeholder"
+    android:layout_width="56dp"
+    android:layout_height="56dp"
+    android:layout_marginStart="16dp"
+    android:layout_gravity="center_vertical|end"
+    android:visibility="gone"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="0dp"
+    app:strokeWidth="0dp"
+    app:cardBackgroundColor="?attr/colorSurfaceVariant">
+
+    <ImageView
+      style="@style/Widget.Grocy.ImageView.Icon"
+      android:src="@drawable/ic_round_image"
+      android:layout_gravity="center"
+      tools:ignore="ContentDescription" />
+
+  </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
