@@ -19,9 +19,13 @@
 
 <LinearLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
+  xmlns:tools="http://schemas.android.com/tools"
+  xmlns:app="http://schemas.android.com/apk/res-auto"
   android:id="@+id/linear_container"
   style="@style/Widget.Grocy.LinearLayout.ListItem.TwoLine.Clickable.More"
-  android:background="@drawable/ripple_list_item_swipeable">
+  android:background="@drawable/ripple_list_item_swipeable"
+  android:paddingStart="16dp"
+  android:paddingEnd="16dp">
 
   <LinearLayout style="@style/Widget.Grocy.LinearLayout.ListItem.TextBox.Stretch">
 
@@ -77,7 +81,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_marginStart="16dp"
-    android:layout_gravity="top"
+    android:layout_gravity="center_vertical"
     android:visibility="gone">
 
     <TextView
@@ -98,5 +102,33 @@
       android:textColor="?attr/colorOnSurfaceVariant" />
 
   </LinearLayout>
+
+  <ImageView
+    android:id="@+id/picture"
+    android:layout_width="56dp"
+    android:layout_height="56dp"
+    android:layout_marginStart="16dp"
+    android:layout_gravity="center_vertical|end"
+    tools:ignore="ContentDescription" />
+
+  <com.google.android.material.card.MaterialCardView
+    android:id="@+id/picture_placeholder"
+    android:layout_width="56dp"
+    android:layout_height="56dp"
+    android:layout_marginStart="16dp"
+    android:layout_gravity="center_vertical|end"
+    android:visibility="gone"
+    app:cardCornerRadius="12dp"
+    app:cardElevation="0dp"
+    app:strokeWidth="0dp"
+    app:cardBackgroundColor="?attr/colorSurfaceVariant">
+
+    <ImageView
+      style="@style/Widget.Grocy.ImageView.Icon"
+      android:src="@drawable/ic_round_image"
+      android:layout_gravity="center"
+      tools:ignore="ContentDescription" />
+
+  </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
